--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,7 +30,7 @@
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/ProfilePic"
+                    android:layout_toEndOf="@+id/profilePic"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:text="Accepted requests"
