--- a/app/src/main/res/layout/fragment_profilr.xml
+++ b/app/src/main/res/layout/fragment_profilr.xml
@@ -44,7 +44,7 @@
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:text="Ashish Purohit"
+            android:text="Bhuwnesh Ashish "
             android:layout_toRightOf="@id/IvProfile"
             android:layout_below="@+id/MenuText"
             android:layout_marginTop="25dp"
